# PythonForDataScience

Python_0_Starting/ex00/: Hello.py
Python_0_Starting/ex01/: format_ft_time.py
Python_0_Starting/ex02/: find_ft_type.py
Python_0_Starting/ex03/: NULL_not_found.py
Python_0_Starting/ex04/: whatis.py
Python_0_Starting/ex05/: building.py
Python_0_Starting/ex06/: filterstring.py  ft_filter.py
Python_0_Starting/ex07/: sos.py
Python_0_Starting/ex08/: Loading.py  tester.py
Python_0_Starting/ex09/: Lorem.txt  test_count.py
Python_0_Starting/ex09/ft_package/: README.md  example_count.py  pyproject.toml
Python_0_Starting/ex09/ft_package/ft_package/: __init__.py  count_lines.py
Python_0_Starting/ex09/ft_package/tests/: inner_test.py
Python_1_Array/ex00/: give_bmi.py  tester.py
Python_1_Array/ex01/: array2D.py
Python_1_Array/ex02/: load_image.py
Python_1_Array/ex03/: load_image.py  tester.py  zoom.py
Python_1_Array/ex04/: load_image.py  rotate.py  tester.py
Python_1_Array/ex05/: load_image.py  pimp_image.py  tester.py
Python_2_DataTable/ex01/: aff_life.py  tester.py
Python_2_DataTable/ex02/: aff_pop.py  tester.py
Python_2_DataTable/ex03/: load_csv.py  projection_life.py  tester.py
Python_3_OOP/ex00/: S1E9.py  tester.py
Python_3_OOP/ex01/: S1E7.py
Python_3_OOP/ex02/: DiamondTrap.py  tester.py
Python_3_OOP/ex03/: ft_calculator.py  tester.py
Python_3_OOP/ex04/: ft_calculator.py
Python_4_DOD/ex00/: statistics.py  tester.py
Python_4_DOD/ex01/: in_out.py
Python_4_DOD/ex02/: callLimit.py
Python_4_DOD/ex03/: new_student.py  tester.py
